# zugferd_rust

./: Cargo.toml  README.md
examples/: generated.xml  generated_basic.xml  generated_basic_wl.xml  generated_minimum.xml  provided_basic.xml  provided_en16931_simple.xml  provided_enxtended_goods.xml  provided_xrechnung_simple.xml
examples/01_minimum/: main.rs
src/: lib.rs  main.rs
src/components/: business_rules.rs  constants.rs  functions.rs  mod.rs  structs.rs
src/components/enums/: allowance_charge_reason_code.rs  country_code.rs  currency_code.rs  identifier_scheme_code.rs  invoice_type_code.rs  mod.rs  payment_means_code.rs  specification_level.rs  unit_code.rs  vat_category_code.rs
