[package]
name = "zugferd"
version = "0.1.3"
edition = "2021"
authors = ["FaultierSP <faultiersp@decreation.org>"]
description = "Generate a ZUGFeRD XML for European e-invoices."
repository = "https://github.com/FaultierSP/zugferd_rust"
license = "Apache-2.0"

[dependencies]
chrono = "0.4.38"
quick-xml = { version = "0.36.2", features = ["serialize"] }
serde = { version = "1.0.214", features = ["derive"] }
